Tests/CompilerTests/negative/cyclic-typealias.hylo
//! no-std

typealias X = Y
typealias Y = Z
typealias Z = X
