Tests/CompilerTests/negative/cyclic-typealias.expected
negative/cyclic-typealias.hylo:3.11-12: error: definition of 'X' refers to itself
typealias X = Y
          ^
